[package]
name = "cells"
version = "0.1.0"
authors = ["kastenbutt <hello@jonasklein.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
futures = "0.3.5"
winit = "0.22.2"
log = "0.4.11"
env_logger = "0.7.1"
shaderc = "0.6.2"
bytemuck = "1.3.1"
cgmath = "0.17.0"
specs = { version = "0.16.1", features = ["specs-derive"] }