[package]
name = "cells"
version = "0.1.0"
authors = ["kastenbutt <hello@jonasklein.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wgpu = { version = "0.5.0", git = "https://github.com/gfx-rs/wgpu-rs" }
wgpu = { version = "0.6.0", features = ["vulkan-portability"] }
futures = "0.3.5"
winit = "0.22.2"
log = "0.4.11"
env_logger = "0.7.1"
shaderc = "0.6.3"
bytemuck = "1.3.1"
cgmath = "0.17.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
imgui = "0.5"
imgui-winit-support = "0.5.0"
imgui-wgpu = "0.11.0"
handled_vec = { path="../handled_vec" }