[package]
name = "cells"
version = "0.1.0"
authors = ["Jonas Klein <hello@jonasklein.dev>"]
edition = "2024"

[dependencies]
wgpu = { version = "26.0.1", features = ["spirv"] }
futures = "0.3.5"
winit = "0.30.12"
log = "0.4.11"
env_logger = "0.11.8"
shaderc = "0.10.1"
bytemuck = "1.3.1"
cgmath = "0.18.0"
specs = { version = "0.20.0", features = ["specs-derive"] }
imgui = "0.12.0"
rand = "0.9.2"
shaderc-sys = {  version = "0.10.1", features = ["build-from-source"] }